--- a/src/effective-dollop/qml.qrc
+++ b/src/effective-dollop/qml.qrc
@@ -1,6 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>MainForm.ui.qml</file>
+        <file>Button.qml</file>
+        <file>Dialog.qml</file>
+        <file>TextRect.qml</file>
     </qresource>
 </RCC>
